--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Rock-Paper-Scissors</title>
 </head>
 <body>
-    <script src="scripts.js"></script>
+    <div id="buttons">
+        
+    </div>
+    <script src="scripts.js" defer></script>
     
 </body>
 </html>
